task inputs in a better parsable format
Signed-off-by: Lehmann-Fabian <fabian.lehmann@informatik.hu-berlin.de>